--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@
 /tmp/*
 !/log/.keep
 !/tmp/.keep
+!/tmp/pid/.keep
+!/tmp/sockets/.keep
 
 /node_modules
 /yarn-error.log
@@ -20,3 +22,5 @@
 
 /db/seeds/*
 /初期*
+/Capfile
+/config/deploy.rb
