--- a/config/database.yml
+++ b/config/database.yml
@@ -80,7 +80,4 @@ test:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
 production:
-  <<: *default
-  database: FlaghuntResult_production
-  username: FlaghuntResult
-  password: <%= ENV['FLAGHUNTRESULT_DATABASE_PASSWORD'] %>
+  url: <%= ENV['DATABASE_URL'] %>
